# FlyingACE

./: .gitignore  CMakeLists.txt  Readme.MD
Classes/: AppDelegate.cpp  BulletLayer.cpp  ControlLayer.cpp  EnemyBulletLayer.cpp  EnemyBulletLayer.h  EnemyLayer.cpp  GameBackgroundLayer.h  GameScene.cpp  HelloWorldScene.cpp  PlaneLayer.cpp  ResultBackgroundLayer.cpp  ResultButtonLayer.cpp  ResultButtonLayer.h  ResultScene.cpp  SelectButtonLayer.cpp  SelectScene.cpp  WalletBackgroundLayer.cpp  WalletBackgroundLayer.h  WalletButtonLayer.cpp  WalletButtonLayer.h  WalletScene.cpp  WalletScene.h  WelcomeButtonLayer.cpp  WelcomeButtonLayer.h  WelcomeScene.cpp  WelcomeScene.h
Resources/game-token/: info.txt
game-program/: Makefile  README.md
game-program/client/: package-lock.json
game-program/program/: Cargo.toml
game-program/program/src/: error.rs  processor.rs
privateResources/: FlyingACETexture.tps
proj.android/: settings.gradle
proj.android/app/: AndroidManifest.xml  build.gradle
proj.ios_mac/FlyingACE.xcodeproj/: project.pbxproj
proj.ios_mac/ios/: Info.plist
proj.ios_mac/mac/: Info.plist
proj.win32/: FlyingACE.sln
solana-programs/flightace-solana-program/: Cargo.toml
solana-programs/flightace-solana-program/account/: index.js  package-lock.json
solana-programs/flightace-solana-program/localnet/: program.json
solana-programs/flightace-solana-program/src/: lib.rs
solana-programs/game-program/client/: main.ts
solana_programs/flightace-solana-program/: Makefile  Readme.MD
wallet/: Readme.MD
wallet/src/: lib.rs
(+7 files in other folders)
