[package]
name = "flightace-program"
version = "0.1.0"
description = "Solana program for storing game score of FlightACE"
authors = ["Andrey Khalepov <w54661c@gmail.com>"]
edition = "2021"
repository = "https://github.com/hanMaster/FlyingACE"

[features]
no-entrypoint = []

[dependencies]
borsh = "0.9.1"
borsh-derive = "0.9.1"
solana-program = "=1.9.5"

[dev-dependencies]
solana-program-test = "=1.9.5"
solana-sdk = "=1.9.5"

[lib]
name = "flightace"
crate-type = ["cdylib", "lib"]